// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui actions Action Creators Add to Team creates a HIDE_ADD_TO_TEAM action 1`] = `
Object {
  "type": "HIDE_ADD_TO_TEAM",
}
`;

exports[`ui actions Action Creators Add to Team creates a SHOW_ADD_TO_TEAM action 1`] = `
Object {
  "type": "SHOW_ADD_TO_TEAM",
}
`;

exports[`ui actions Action Creators Board Menu creates a HIDE_BOARD_MENU action 1`] = `
Object {
  "type": "HIDE_BOARD_MENU",
}
`;

exports[`ui actions Action Creators Board Menu creates a SHOW_BOARD_MENU action 1`] = `
Object {
  "type": "SHOW_BOARD_MENU",
}
`;

exports[`ui actions Action Creators Boards Explorer creates a HIDE_BOARDS_EXPLORER action 1`] = `
Object {
  "type": "HIDE_BOARDS_EXPLORER",
}
`;

exports[`ui actions Action Creators Boards Explorer creates a SHOW_BOARDS_EXPLORER action 1`] = `
Object {
  "type": "SHOW_BOARDS_EXPLORER",
}
`;

exports[`ui actions Action Creators Create Menu creates a HIDE_CREATE_MENU action 1`] = `
Object {
  "type": "HIDE_CREATE_MENU",
}
`;

exports[`ui actions Action Creators Create Menu creates a SHOW_CREATE_MENU action 1`] = `
Object {
  "type": "SHOW_CREATE_MENU",
}
`;

exports[`ui actions Action Creators Header Search creates a BLUR_HEADER_SEARCH action 1`] = `
Object {
  "type": "BLUR_HEADER_SEARCH",
}
`;

exports[`ui actions Action Creators Header Search creates a FOCUS_HEADER_SEARCH action 1`] = `
Object {
  "type": "FOCUS_HEADER_SEARCH",
}
`;

exports[`ui actions Action Creators Header Search creates a SET_HEADER_SEARCH action 1`] = `
Object {
  "term": "something",
  "type": "SET_HEADER_SEARCH",
}
`;

exports[`ui actions Action Creators Notifications creates a HIDE_NOTIFICATIONS action 1`] = `
Object {
  "type": "HIDE_NOTIFICATIONS",
}
`;

exports[`ui actions Action Creators Notifications creates a SHOW_NOTIFICATIONS action 1`] = `
Object {
  "type": "SHOW_NOTIFICATIONS",
}
`;

exports[`ui actions Action Creators Rename Board creates a HIDE_RENAME_BOARD action 1`] = `
Object {
  "type": "HIDE_RENAME_BOARD",
}
`;

exports[`ui actions Action Creators Rename Board creates a SHOW_RENAME_BOARD action 1`] = `
Object {
  "type": "SHOW_RENAME_BOARD",
}
`;

exports[`ui actions Action Creators UI Errors creates a RESET_UI_ERROR action 1`] = `
Object {
  "type": "RESET_UI_ERROR",
}
`;

exports[`ui actions Action Creators UI Errors creates a SET_UI_ERROR action 1`] = `
Object {
  "error": Object {
    "header": "Verify email!",
    "kind": "invalidEmail",
    "message": "That doesn't look like an email address…",
  },
  "type": "SET_UI_ERROR",
}
`;

exports[`ui actions Action Creators User Menu creates a HIDE_USER_MENU action 1`] = `
Object {
  "type": "HIDE_USER_MENU",
}
`;

exports[`ui actions Action Creators User Menu creates a SHOW_USER_MENU action 1`] = `
Object {
  "type": "SHOW_USER_MENU",
}
`;

exports[`ui actions Action Creators Visibility Menu creates a HIDE_VISIBILITY_MENU action 1`] = `
Object {
  "type": "HIDE_VISIBILITY_MENU",
}
`;

exports[`ui actions Action Creators Visibility Menu creates a SHOW_VISIBILITY_MENU action 1`] = `
Object {
  "type": "SHOW_VISIBILITY_MENU",
}
`;
